<resources>
    <string name="app_name">Rambutan</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="partner">Partner</string>
    <string name="add_partner">Add partner</string>
    <string name="birthday">Birthday</string>
    <string name="save_person">Save person</string>
    <string name="delete_person">Delete person</string>
    <string name="start_game">Start game</string>
    <string name="game">Game</string>
</resources>
